--- a/Contactos/View/ContactDetailsPage.xaml
+++ b/Contactos/View/ContactDetailsPage.xaml
@@ -1,5 +1,11 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Contactos.View.ContactDetailsPage">
-    <ContentPage.Content>
-    </ContentPage.Content>
+<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Contactos.View.ContactDetailsPage">
+    <StackLayout Margin="16,20,16,0">
+        <Label x:Name="nameLabel"/>
+        <Label x:Name="lastNameLabel"/>
+        <Label x:Name="emailLabel"/>
+        <Label x:Name="phoneLabel"/>
+    </StackLayout>
 </ContentPage>
