--- a/Contactos/View/NewContactPage.xaml
+++ b/Contactos/View/NewContactPage.xaml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:Contactos.ViewModel"
              x:Class="Contactos.View.NewContactPage">
-    <StackLayout Margin="16,20,16,0">
-        <Entry x:Name="nameEntry"
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <vm:NewContactVM x:Key="vm"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+    <StackLayout Margin="16,20,16,0"
+                 BindingContext="{StaticResource vm}">
+        <Entry Text="{Binding Name, Mode=TwoWay}"
                Placeholder="Nombre"/>
-        <Entry x:Name="lastnameEntry"
+        <Entry Text="{Binding Lastname, Mode=TwoWay}"
                Placeholder="Apellidos"/>
-        <Entry x:Name="emailEntry"
+        <Entry Text="{Binding Email, Mode=TwoWay}"
                Placeholder="Correo electrónico"
                Keyboard="Email"/>
-        <Entry x:Name="phoneEntry"
+        <Entry Text="{Binding Phone, Mode=TwoWay}"
                Placeholder="Teléfono"
                Keyboard="Telephone"/>
         <Button Text="Guardar"
-                Clicked="Handle_Clicked"/>
+                Command="{Binding SaveContactCommand}"/>
     </StackLayout>
 </ContentPage>
